[package]
name = "group-threshold-cryptography"
version = "0.1.0"
edition = "2018"
authors = ["Heliax AG <hello@heliax.dev>"]
license = "MIT OR Apache-2.0"
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/heliaxdev/group-threshold-crypto/"
readme = "README.md"

[dependencies]
hex = "=0.4.3"
rand_core = { version = "=0.5" }
rand = "=0.7.3"
rayon = "=1.5.0"
thiserror = "=1.0.14"

blake2b_simd = "0.5.11"
miracl_core = "=2.3.0"
chacha20 = "=0.6.0"
ark-ff = "=0.2.0"
ark-ec = "=0.2.0"
ark-poly = "=0.2.0"
ark-serialize = "=0.2.0"
ark-std = "=0.2.0"
ark-bls12-381 = "=0.2.0"

[dev-dependencies]
criterion = "=0.3.4"

[profile.test]
opt-level = 3

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
debug = true

